--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
 	<link rel="stylesheet" href="./build/bundle.css" />
 
 	<script defer src="./build/bundle.js"></script>
+
+	<style>
+	body {
+		padding: 0;
+		margin: 0;
+	}
+	</style>
 </head>
 
 <body>
